--- a/app/src/main/res/menu/paint_menu.xml
+++ b/app/src/main/res/menu/paint_menu.xml
@@ -6,11 +6,11 @@
         android:icon="@drawable/ic_check_white_24px"
         android:orderInCategory="100"
         android:title="@string/save"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_clear"
         android:icon="@drawable/ic_clear_white_24px"
         android:orderInCategory="99"
         android:title="@string/clear"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
